// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Cluster /> test renders correctly 1`] = `
<Fragment>
  <PageHeader
    className="pf-m-light ins-inventory-detail"
  >
    <withRouter(Connect(RouterParams))
      current="foobar"
      match={
        Object {
          "params": Object {
            "clusterId": "foobar",
          },
          "url": "foobar",
        }
      }
    />
    <mockConstructor />
  </PageHeader>
  <Connect(Main)>
    <Grid
      hasGutter={true}
    >
      <GridItem
        span={12}
      >
        <ClusterRules
          reports={Array []}
        />
      </GridItem>
    </Grid>
  </Connect(Main)>
</Fragment>
`;

exports[`<Cluster /> test renders correctly when cluster loading 1`] = `
<Fragment>
  <PageHeader
    className="pf-m-light ins-inventory-detail"
  >
    <withRouter(Connect(RouterParams))
      current="foobar"
      match={
        Object {
          "params": Object {
            "clusterId": "foobar",
          },
          "url": "foobar",
        }
      }
    />
    <mockConstructor />
  </PageHeader>
  <Connect(Main)>
    <Loading />
  </Connect(Main)>
</Fragment>
`;

exports[`<Cluster /> test renders correctly when cluster unavailable 1`] = `
<Fragment>
  <PageHeader
    className="pf-m-light ins-inventory-detail"
  >
    <withRouter(Connect(RouterParams))
      current="foobar"
      match={
        Object {
          "params": Object {
            "clusterId": "foobar",
          },
          "url": "foobar",
        }
      }
    />
    <mockConstructor />
  </PageHeader>
  <Connect(Main)>
    <MessageState
      icon={[Function]}
      text="There was an error fetching recommendations for this cluster. Refresh your page to try again."
      title="No recommendations available"
      variant="full"
    />
  </Connect(Main)>
</Fragment>
`;
